# scavio-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scavio/: __init__.py  _async_client.py  _client.py  _exceptions.py  _http.py  _namespaces_async.py  _namespaces_sync.py  _params.py  _ratelimit.py  _retry.py  _spec.py  _types.py
scripts/: gen_namespaces.py
tests/: _endpoint_cases.py  conftest.py  test_async_client.py  test_client.py  test_config.py  test_errors.py  test_parity.py  test_ratelimit.py  test_retry.py  test_wire_mapping.py
