[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scavio-python"
version = "0.1.0"
description = "Python SDK for the Scavio Search API - real-time Google, Amazon, Walmart, YouTube, Reddit, and TikTok data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Scavio", email = "support@scavio.dev" }]
keywords = [
    "search",
    "api",
    "ai",
    "web-search",
    "tavily-alternative",
    "google-search",
    "amazon",
    "walmart",
    "youtube",
    "reddit",
    "tiktok",
    "serp",
    "ecommerce",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://scavio.dev"
Documentation = "https://docs.scavio.dev"
Repository = "https://github.com/scavio-ai/scavio-python"
Issues = "https://github.com/scavio-ai/scavio-python/issues"
Dashboard = "https://dashboard.scavio.dev"

[tool.hatch.build.targets.wheel]
packages = ["scavio"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
