[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scavio"
version = "0.1.1"
description = "Python SDK for the Scavio Search API - real-time Google, Amazon, Walmart, YouTube, Reddit, and TikTok data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Scavio", email = "support@scavio.dev" }]
keywords = [
    "search",
    "api",
    "ai",
    "llm",
    "ai-agent",
    "web-search",
    "web-scraping",
    "scraping",
    "tavily-alternative",
    "serpapi-alternative",
    "scraperapi-alternative",
    "google-search",
    "amazon",
    "walmart",
    "youtube",
    "reddit",
    "tiktok",
    "serp",
    "ecommerce",
    "knowledge-graph",
    "data-extraction",
    "product-data",
    "price-comparison",
    "social-media",
    "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://scavio.dev"
Documentation = "https://docs.scavio.dev"
Repository = "https://github.com/scavio-ai/scavio-python"
Issues = "https://github.com/scavio-ai/scavio-python/issues"
Changelog = "https://github.com/scavio-ai/scavio-python/releases"
Dashboard = "https://dashboard.scavio.dev"

[tool.hatch.build.targets.wheel]
packages = ["scavio"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
